style.css
/* #region global */
/* global definitions for all sub-pages are located in ./styles/page/page-definitions.css */
/* font size variables are only applicable for /page */
h1 {
    font-family: "Arima";
    font-weight: 700;
    font-size: 3.75rem;
    /* NOTE: h1 does not exist in mobile */
    font-size: clamp(var(--f-size-h1-mobile), calc((3.75rem * 100vw / 840px)), 3.75rem);
    color: var(--text-color);
}

h2 {
    font-family: "Arima";
    font-weight: 700;
    font-size: clamp(2.5rem, calc((3.25rem * 100vw / 840px)), 3.25rem);
    color: var(--color-main1);
}

h3 {
    font-family: "Palanquin Dark";
    font-weight: 600;
    font-size: clamp(1.75rem, calc((3rem * 100vw / 840px)), 3rem);
    line-height: 100%;
    color: #ffffff;
}

h4 {
    font-family: "Palanquin";
    font-weight: 400;
    font-size: clamp(1.25rem, calc((1.75rem * 100vw / 840px)), 1.75rem);
    line-height: 100%;
    color: #ffffff;
}

p {
    font-family: "Palanquin";
    font-weight: 500;
    font-size: clamp(1rem, calc((1.5rem * 100vw / 840px)), 1.5rem);
    color: var(--text-color);
    line-height: 110%;
}
/* #endregion global */

/* #region header */
header {
    nav {
        display: flex;
        justify-content: center;
        height: 70px;
        background-color: var(--color-main1);
    }

    a {
        display: flex;
        align-items: center;
        height: 100%;
        text-decoration: none;

        p {
            font-family: "Arima";
            font-weight: 700;
            font-size: 1.5rem;
            color: #f8f5eb;
        }
    }

    a:hover {
        p {
            color: var(--color-main2);
        }

        .nav-desktop > img {
            transition: all 200ms ease-in-out;
            opacity: 1;
        }
    }

    a:active {
        p {
            color: #f8f5eb;
        }
    }

    img {
        height: 56px;
        width: 56px;
    }

    ul {
        transition: all 150ms ease-in-out;

        display: flex;
        align-items: center;
        justify-content: center;

        position: fixed;
        bottom: 0;
        z-index: 3;

        width: 100%;
        height: 88px;
        gap: 48px;

        background-color: var(--color-main2);
        list-style-type: none;

        li {
            display: flex;
            height: 100%;
            align-items: center;

            img {
                height: 40px;
                width: 40px;
            }
        }
    }
}

/* mobile-first: do not show desktop version of nav-bar */
.nav-desktop {
    display: none;
}
/* #endregion header */

/* #region content-main */
.content-main {
    display: flex;
    flex-direction: column;
    align-items: center;

    width: 100%;
}

/* smooth content limitation for content sections with up to 120px padding */
/* |  |<---------- 1440 ---------->|  | */
/* |  |            Hero            |  | */
/* |  |<-120| Content (desk) |120->|  | */
/* |  |<- 20| Content (mobi) | 20->|  | */

.content-main-section {
    height: 100%;
    width: 100%;
    /* padding desktop/mobile top/bottom 80px -> 40px & left/right 120px -> 20px */
    padding: 40px max(calc(50% - 720px + 120px), clamp(20px, calc((120px * 100vw / 840px) / 2.5), 120px));
}

.section-landing {
    padding: 0 calc(50% - 720px);
    padding-bottom: 40px;
    height: 540px;

    position: relative;
    overflow: hidden;

    /* place the background image into a container to align it to the right, while overlay is aligned to the left */
    .landing-bg {
        position: relative;
        img {
            right: max(calc(50% - 720px), clamp(-410px, calc((100vw - 400px) * 410px / 1040px - 410px), 0px));
        }
    }

    .landing-headline {
        height: clamp(51%, calc((100vw - 400px) * 49% / 550px + 51%), 100%);
    }

    .landing-overlay {
        position: absolute;
        top: 0;
    }

    .landing-icon {
        /* school was a while ago... f(x) = (x-x1) * (y2 - y1) / (x2 - x1) + y1 */
        left: max(calc(50% - 270px), clamp(50px, calc((100vw - 400px) * 400px / 550px + 50px), 450px));
        top: clamp(40%, calc((100vw - 400px) * 15% / 1040px + 40%), 55%);
    }

    .landing-txt {
        display: none;
    }

    .landing-overlay-bg {
        height: clamp(51%, calc((100vw - 400px) * 49% / 550px + 51%), 100%);
        left: max(calc(50% - 720px), clamp(-100px, calc((100vw - 400px) * 100px / 1040px - 100px), 0px));
    }
}
/* ... */

